--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,10 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Fontawesome
-@import "~font-awesome/css/font-awesome.css";
+@import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
 video#bgvid {
     position: fixed; right: 0; bottom: 0;
